increase z-index for drop down for display issue on navbar search

--- a/docs/assets/css/bootstrap.css
+++ b/docs/assets/css/bootstrap.css
@@ -2768,7 +2768,7 @@ table [class*=span],
   position: absolute;
   top: 100%;
   left: 0;
-  z-index: 1000;
+  z-index: 1031;
   display: none;
   float: left;
   min-width: 160px;
@@ -2860,7 +2860,7 @@ table [class*=span],
 }
 
 .open {
-  *z-index: 1000;
+  *z-index: 1031;
 }
 
 .open > .dropdown-menu {
@@ -4860,11 +4860,11 @@ input[type="submit"].btn.btn-mini {
 }
 
 .modal-open .modal .dropdown-menu {
-  z-index: 2050;
+  z-index: 2081;
 }
 
 .modal-open .modal .dropdown.open {
-  *z-index: 2050;
+  *z-index: 2081;
 }
 
 .modal-open .modal .popover {
